# reverie

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  example-transcript.md
examples/: demo.py  real_run.py
reverie/: __init__.py  artifacts.py  context.py  engine.py  gate.py  llm.py  observability.py  prompts.py  runner.py  types.py
tests/: test_artifacts.py  test_engine.py  test_gate.py  test_runner.py
