[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reverie-engine"
version = "0.1.0"
description = "A reasoning-first idle engine for persistent LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "freeze1999" }]
keywords = ["llm", "agents", "autonomy", "persistent-agents", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero hard runtime dependencies, the core runs on the standard library.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/freeze1999/reverie"

[tool.setuptools.packages.find]
include = ["reverie*"]
